[gd_scene load_steps=9 format=4 uid="uid://d2nhtvddhham6"]

[ext_resource type="Script" uid="uid://qtlc03dgcseo" path="res://levels/scripts/level.gd" id="1_xgrxd"]
[ext_resource type="PackedScene" uid="uid://diwmvkgtca114" path="res://tile_maps/grass-01.tscn" id="2_on67r"]
[ext_resource type="PackedScene" uid="uid://b3oaeqoffq7dl" path="res://levels/player_spawn.tscn" id="3_5h3qi"]
[ext_resource type="PackedScene" uid="uid://cssawlcgy87g8" path="res://gui/player_hud/player_hud.tscn" id="4_ey1d6"]
[ext_resource type="Script" uid="uid://dp7xt1c8ct3s4" path="res://levels/tutorial_items/tutorial_dialog.gd" id="5_kox87"]
[ext_resource type="PackedScene" uid="uid://ctqin6e0wq3vi" path="res://touch_controls/Scene/touch_controls.tscn" id="6_te4hv"]
[ext_resource type="PackedScene" uid="uid://cgf1781jg33w2" path="res://touch_controls/Scene/pause_button.tscn" id="7_7oy6e"]
[ext_resource type="PackedScene" uid="uid://cyyhm21q0wqey" path="res://levels/level_transition.tscn" id="8_suuof"]

[node name="02" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_xgrxd")

[node name="Grass-01" parent="." instance=ExtResource("2_on67r")]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAcAAAAAAAEAAAAAAAcAAAAAAAIAAAAAAAcAAAAAAAMAAAAAAAcAAAAAAAQAAAAAAAcAAAAAAAUAAAAAAAcAAAAAAAYAAAAAAAcAAAAAAAcAAAAAAAcAAAAAAAgAAAAAAAcAAAAAAAkAAAAAAAcAAAAAAAoAAAAAAAcAAAAAAAsAAAAAAAcAAAAAAAwAAAAAAAcAACAAAA0AAAAAAAYAACAAAA4AAAAAAAUAACABAAAAAAABAAcAAAABAAEAAAABAAcAAAABAAIAAAABAAcAAAABAAMAAAABAAcAAAABAAQAAAABAAcAAAABAAUAAAABAAcAAAABAAYAAAABAAcAAAABAAcAAAABAAcAAAABAAgAAAABAAcAAAABAAkAAAABAAcAAAABAAoAAAABAAcAAAABAAsAAAABAAcAAAABAAwAAAABAAcAACABAA0AAAABAAYAACABAA4AAAABAAUAACACAAAAAAAAAAIAAAACAAEAAAAAAAMAAAACAAIAAAAAAAIAAAACAAMAAAAAAAMAAAACAAQAAAAAAAIAAAACAAUAAAAAAAMAAAACAAYAAAAAAAIAAAACAAcAAAAAAAMAAAACAAgAAAAAAAIAAAACAAkAAAAAAAMAAAACAAoAAAAAAAIAAAACAAsAAAAAAAMAAAACAAwAAAACAAQAAAACAA0AAAAEAAUAAAACAA4AAAADAAUAAAADAAAAAAABAAIAAAADAAEAAAABAAMAAAADAAIAAAABAAIAAAADAAMAAAABAAMAAAADAAQAAAABAAIAAAADAAUAAAABAAMAAAADAAYAAAABAAIAAAADAAcAAAABAAMAAAADAAgAAAABAAIAAAADAAkAAAABAAMAAAADAAoAAAABAAIAAAADAAsAAAABAAMAAAADAAwAAAADAAQAAAADAA0AAAAEAAUAAAADAA4AAAADAAUAAAAEAAAAAAAAAAIAAAAEAAEAAAAAAAMAAAAEAAIAAAADAAUAAAAEAAMAAAADAAUAAAAEAAQAAAADAAUAAAAEAAUAAAADAAUAAAAEAAYAAAADAAUAAAAEAAcAAAADAAUAAAAEAAgAAAADAAUAAAAEAAkAAAAAAAIAAAAEAAoAAAAAAAMAAAAEAAsAAAAAAAIAAAAEAAwAAAACAAQAAAAEAA0AAAAEAAUAAAAEAA4AAAADAAUAAAAFAAAAAAABAAIAAAAFAAEAAAABAAMAAAAFAAIAAAADAAUAAAAFAAMAAAABAAMAAAAFAAQAAAABAAIAAAAFAAUAAAABAAMAAAAFAAYAAAABAAIAAAAFAAcAAAABAAMAAAAFAAgAAAADAAUAAAAFAAkAAAABAAIAAAAFAAoAAAABAAMAAAAFAAsAAAABAAIAAAAFAAwAAAADAAQAAAAFAA0AAAAEAAUAAAAFAA4AAAADAAUAAAAGAAAAAAAAAAIAAAAGAAEAAAAAAAMAAAAGAAIAAAADAAUAAAAGAAMAAAAAAAMAAAAGAAQAAAADAAUAAAAGAAUAAAADAAUAAAAGAAYAAAACAAMAAAAGAAcAAAACAAMAAAAGAAgAAAADAAUAAAAGAAkAAAAAAAIAAAAGAAoAAAAAAAMAAAAGAAsAAAAAAAIAAAAGAAwAAAAEAAQAAAAGAA0AAAAEAAUAAAAGAA4AAAADAAUAAAAHAAAAAAABAAIAAAAHAAEAAAABAAMAAAAHAAIAAAADAAUAAAAHAAMAAAABAAMAAAAHAAQAAAADAAUAAAAHAAUAAAADAAUAAAAHAAYAAAACAAMAAAAHAAcAAAACAAMAAAAHAAgAAAADAAUAAAAHAAkAAAADAAUAAAAHAAoAAAADAAUAAAAHAAsAAAADAAUAAAAHAAwAAAADAAUAAAAHAA0AAAADAAUAAAAHAA4AAAADAAUAAAAIAAAAAAAAAAIAAAAIAAEAAAAAAAMAAAAIAAIAAAADAAUAAAAIAAMAAAAAAAMAAAAIAAQAAAADAAUAAAAIAAUAAAADAAUAAAAIAAYAAAAAAAIAAAAIAAcAAAAAAAMAAAAIAAgAAAAHAAcAAAAIAAkAAAAHAAcAAAAIAAoAAAAHAAcAAAAIAAsAAAAIAAAAAAAIAAwAAAAIAAEAAAAIAA0AAAANAAIAAAAIAA4AAAAOAAEAAAAJAAAAAAABAAIAAAAJAAEAAAABAAMAAAAJAAIAAAADAAUAAAAJAAMAAAABAAMAAAAJAAQAAAADAAUAAAAJAAUAAAADAAUAAAAJAAYAAAADAAUAAAAJAAcAAAABAAMAAAAJAAgAAAAHAAcAAAAJAAkAAAAHAAcAAAAJAAoAAAAHAAcAAAAJAAsAAAAJAAAAAAAJAAwAAAAIAAAAAAAJAA0AAAAIAAEAAAAJAA4AAAAOAAEAAAAKAAAAAAAAAAIAAAAKAAEAAAAAAAMAAAAKAAIAAAADAAUAAAAKAAMAAAAAAAMAAAAKAAQAAAADAAUAAAAKAAUAAAACAAMAAAAKAAYAAAADAAUAAAAKAAcAAAADAAUAAAAKAAgAAAAHAAcAAAAKAAkAAAAHAAcAAAAKAAoAAAAHAAcAAAAKAAsAAAANAAIAAAAKAAwAAAAJAAAAAAAKAA0AAAAJAAEAAAAKAA4AAAAOAAEAAAALAAAAAAADAAUAAAALAAEAAAADAAUAAAALAAIAAAADAAUAAAALAAMAAAABAAMAAAALAAQAAAADAAUAAAALAAUAAAACAAMAAAALAAYAAAACAAMAAAALAAcAAAADAAUAAAALAAgAAAADAAUAAAALAAkAAAADAAUAAAALAAoAAAADAAUAAAALAAsAAAADAAUAAAALAAwAAAADAAUAAAALAA0AAAADAAUAAAALAA4AAAADAAUAAAAMAAAAAAAAAAIAAAAMAAEAAAAAAAMAAAAMAAIAAAAAAAIAAAAMAAMAAAAAAAMAAAAMAAQAAAADAAUAAAAMAAUAAAACAAMAAAAMAAYAAAACAAMAAAAMAAcAAAACAAMAAAAMAAgAAAAAAAIAAAAMAAkAAAAHAAcAAAAMAAoAAAAAAAIAAAAMAAsAAAAAAAIAAAAMAAwAAAACAAQAAAAMAA0AAAAEAAUAAAAMAA4AAAAEAAUAAAANAAAAAAABAAIAAAANAAEAAAABAAMAAAANAAIAAAABAAIAAAANAAMAAAABAAMAAAANAAQAAAADAAUAAAANAAUAAAACAAMAAAANAAYAAAACAAMAAAANAAcAAAACAAMAAAANAAgAAAABAAIAAAANAAkAAAABAAMAAAANAAoAAAABAAIAAAANAAsAAAABAAIAAAANAAwAAAACAAQAAAANAA0AAAAEAAUAAAANAA4AAAAEAAUAAAAOAAAAAAADAAUAAAAOAAEAAAADAAUAAAAOAAIAAAADAAUAAAAOAAMAAAADAAUAAAAOAAQAAAADAAUAAAAOAAUAAAAAAAMAAAAOAAYAAAAAAAIAAAAOAAcAAAAAAAMAAAAOAAgAAAAAAAIAAAAOAAkAAAAAAAMAAAAOAAoAAAAAAAIAAAAOAAsAAAAAAAIAAAAOAAwAAAACAAQAAAAOAA0AAAAEAAUAAAAOAA4AAAAEAAUAAAAPAAAAAAABAAIAAAAPAAEAAAABAAMAAAAPAAIAAAABAAIAAAAPAAMAAAABAAMAAAAPAAQAAAABAAIAAAAPAAUAAAABAAMAAAAPAAYAAAABAAIAAAAPAAcAAAABAAMAAAAPAAgAAAABAAIAAAAPAAkAAAABAAMAAAAPAAoAAAABAAIAAAAPAAsAAAABAAIAAAAPAAwAAAADAAQAAAAPAA0AAAAEAAUAAAAPAA4AAAAEAAUAAAAQAAAAAAACAAMAAAAQAAEAAAACAAMAAAAQAAIAAAAAAAIAAAAQAAMAAAAAAAMAAAAQAAQAAAAAAAIAAAAQAAUAAAAAAAMAAAAQAAYAAAAAAAIAAAAQAAcAAAAAAAMAAAAQAAgAAAAAAAIAAAAQAAkAAAAAAAMAAAAQAAoAAAAAAAIAAAAQAAsAAAAAAAMAAAAQAAwAAAAEAAQAAAAQAA0AAAAEAAUAAAAQAA4AAAAEAAUAAAARAAAAAAACAAMAAAARAAEAAAACAAMAAAARAAIAAAABAAIAAAARAAMAAAABAAMAAAARAAQAAAABAAIAAAARAAUAAAABAAMAAAARAAYAAAABAAIAAAARAAcAAAABAAMAAAARAAgAAAABAAIAAAARAAkAAAABAAMAAAARAAoAAAABAAIAAAARAAsAAAABAAMAAAARAAwAAAACAAQAAAARAA0AAAAEAAUAAAARAA4AAAAEAAUAAAASAAAAAAABAAcAADASAAEAAAABAAcAADASAAIAAAABAAcAADASAAMAAAABAAcAADASAAQAAAABAAcAADASAAUAAAABAAcAADASAAYAAAABAAcAADASAAcAAAABAAcAADASAAgAAAABAAcAADASAAkAAAABAAcAADASAAoAAAABAAcAADASAAsAAAABAAcAADASAAwAAAABAAcAADASAA0AAAABAAYAADASAA4AAAABAAUAADATAAAAAAAAAAcAADATAAEAAAAAAAcAADATAAIAAAAAAAcAADATAAMAAAAAAAcAADATAAQAAAAAAAcAADATAAUAAAAAAAcAADATAAYAAAAAAAcAADATAAcAAAAAAAcAADATAAgAAAAAAAcAADATAAkAAAAAAAcAADATAAoAAAAAAAcAADATAAsAAAAAAAcAADATAAwAAAAAAAcAADATAA0AAAAAAAYAADATAA4AAAAAAAUAADA=")

[node name="PlayerSpawn" parent="." instance=ExtResource("3_5h3qi")]
position = Vector2(344, 120)

[node name="PlayerHud" parent="." instance=ExtResource("4_ey1d6")]

[node name="TutorialDialog" type="Control" parent="PlayerHud"]
visible = false
layout_mode = 3
anchor_left = 0.05
anchor_top = 0.75
anchor_right = 0.95
anchor_bottom = 0.95
offset_left = -21.0
offset_top = -320.0
offset_right = -21.0
offset_bottom = -320.0
script = ExtResource("5_kox87")
metadata/_edit_use_anchors_ = true

[node name="DialogBackground" type="Panel" parent="PlayerHud/TutorialDialog"]
modulate = Color(0, 0, 0, 0.6)
custom_minimum_size = Vector2(600, 80)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
metadata/_edit_use_anchors_ = true

[node name="DialogLabel" type="Label" parent="PlayerHud/TutorialDialog/DialogBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TouchControls" parent="Control" instance=ExtResource("6_te4hv")]

[node name="PauseButton" parent="Control" instance=ExtResource("7_7oy6e")]

[node name="02To01" parent="." instance=ExtResource("8_suuof")]
position = Vector2(304, 480)
level = "uid://dkiyytwbuvmqo"
target_transition_area = "01To02"
side = 3

[node name="02To03" parent="." instance=ExtResource("8_suuof")]
position = Vector2(416, 0)
level = "uid://d3u3f26n1doh6"
target_transition_area = "03To02"
size = 2
side = 2
